--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 attrs==24.2.0
 certifi==2024.8.30
+charset-normalizer==3.4.1
 exceptiongroup==1.2.2
 h11==0.14.0
 idna==3.10
@@ -10,6 +11,7 @@ pluggy==1.5.0
 PySocks==1.7.1
 pytest==8.3.3
 pytest-check==2.4.1
+requests==2.32.3
 selenium==4.25.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
